# setx

./: Cargo.toml  LICENSE.txt  README.md  build.rs
.cargo/: config.toml
src/: main.rs
