[package]
name    = "setv"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-registry = "0.6.1"

[dependencies.windows]
version  = ">=0.59, <=0.62"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
]

[profile.release]
opt-level     = "z"
strip         = true
lto           = true
panic         = "abort"
incremental   = true
codegen-units = 1
